# llm-permission-proxy

./: AGENTS.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
migrations/: 0001_init.sql  0002_indexes.sql
scripts/: bootstrap_sqlite_smoke_test.sh
spec/: capability-token.schema.json  openapi.yaml  operations-policy.yaml
src/: auth.rs  callbacks.rs  cf.rs  config.rs  db.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs  policy.rs  state.rs  webauthn.rs
tests/: http_flows.rs
tests/common/: mod.rs
